docs/v5.6.1/_sources/gallery/experiment/sphere/coherent_coupling_vs_rotation.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/experiment/sphere/coherent_coupling_vs_rotation.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_experiment_sphere_coherent_coupling_vs_rotation.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_experiment_sphere_coherent_coupling_vs_rotation.py:


Sphere: Coherent mode field rotation
====================================

.. GENERATED FROM PYTHON SOURCE LINES 6-53



.. image-sg:: /gallery/experiment/sphere/images/sphx_glr_coherent_coupling_vs_rotation_001.png
   :alt: coherent coupling vs rotation
   :srcset: /gallery/experiment/sphere/images/sphx_glr_coherent_coupling_vs_rotation_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    BK7            sellmeier  specs/SCHOTT-optical/P-BK7
    aluminium      tabulated  main/Al/Rakic
    fused_silica   sellmeier  main/SiO2/Malitson
    gold           tabulated  main/Au/Olmon-ev
    silver         tabulated  main/Ag/Johnson
    water          sellmeier  main/H2O/Daimon-19.0C

    [<matplotlib.lines.Line2D object at 0x7fe30c7f88d0>, <matplotlib.lines.Line2D object at 0x7fe30c198b10>]





|

.. code-block:: Python

    import numpy
    from PyMieSim import (
        ureg,
        CoherentModeSet,
        SphereSet,
        GaussianSet,
        PolarizationSet,
        Experiment,
        print_available,
        SellmeierMaterial,
    )


    print_available()

    polarization_set = PolarizationSet(
        angles=[90.0] * ureg.degree,
    )

    source = GaussianSet(
        wavelength=[1200] * ureg.nanometer,
        polarization=polarization_set,
        optical_power=[1e-3] * ureg.watt,
        numerical_aperture=[0.2],
    )

    scatterer = SphereSet(
        diameter=[2000, 2300] * ureg.nanometer,
        material=[SellmeierMaterial(material_name="BK7")],
        medium=[1],
    )

    detector = CoherentModeSet(
        mode_number="HG11",
        numerical_aperture=[0.05],
        phi_offset=[0] * ureg.degree,
        gamma_offset=[20] * ureg.degree,
        sampling=[400],
        rotation=numpy.linspace(0, 180, 200) * ureg.degree,
        polarization_filter=None,
    )

    experiment = Experiment(scatterer_set=scatterer, source_set=source, detector_set=detector)

    result = experiment.get("coupling")

    result.plot(x="detector:rotation")


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.153 seconds)


.. _sphx_glr_download_gallery_experiment_sphere_coherent_coupling_vs_rotation.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: coherent_coupling_vs_rotation.ipynb <coherent_coupling_vs_rotation.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: coherent_coupling_vs_rotation.py <coherent_coupling_vs_rotation.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: coherent_coupling_vs_rotation.zip <coherent_coupling_vs_rotation.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
